# Android-ToolChain-Make

./: .gitignore  Android.bp  CMakeLists.txt  METADATA  Makefile.in  README.android  aclocal.m4  configure  configure.ac
doc/: Makefile.in  make-stds.texi
glob/: Makefile.in
lib/: Makefile.am  Makefile.in
m4/: Makefile.in
po/: be.gmo  be.po  bg.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  he.gmo  he.po  hr.gmo  hr.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lt.gmo  lt.po  make.pot  nl.gmo  nl.po  pl.gmo  pl.po  pt.po  pt_BR.gmo  (+15 more)
po/.reference/: be.s1  bg.s1  cs.po  cs.s1  da.po  da.s1  de.po  de.s1  es.po  es.s1  fi.po  fi.s1  fr.po  fr.s1  ga.s1  gl.s1  he.s1  hr.po  hr.s1  id.po  id.s1  it.s1  ja.po  ja.s1  ko.po  ko.s1  lt.s1  nl.po  nl.s1  pl.po  pl.s1  pt.s1  pt_BR.s1  ru.po  ru.s1  sr.po  sr.s1  sv.po  sv.s1  tr.s1  (+7 more)
soong/darwin/: config.h
soong/linux_glibc/: config.h
soong/linux_musl/: config.h
soong/windows/: NOTE.txt  config.h
src/: config.h-vms.template  config.h.in
w32/: Makefile.in
